reviewed and fixed all tests to run on testconatiner